Wed Jan 11 02:10:06 GMT 2012  Olly Betts <olly@survex.com>

	* common/Makefile.mk,common/filetests.h,tests/api_replicate.cc,
	  tests/harness/backendmanager_multi.cc,tests/harness/testsuite.cc:
	  Add new inline versions of file_exists() and directory_exists() and
	  use these from the testsuite, as a step towards making these internal
	  to the library.

Tue Jan 10 23:37:36 GMT 2012  Olly Betts <olly@survex.com>

	* tests/api_serialise.cc: Change the rather odd "operator delete(p);"
	  to the more natural "delete p;".

Tue Jan 10 22:45:01 GMT 2012  Olly Betts <olly@survex.com>

	* tests/unittest.cc: Fix message typo in recent unittest change.

Tue Jan 10 13:48:38 GMT 2012  Olly Betts <olly@survex.com>

	* common/safesysstat.h: The S_ISDIR and S_ISREG macros for MSVC are
	  unlikely to work on other platforms (_S_IFMT vs S_IFMT, etc) so
	  split them.  Tweak a few comments.

Tue Jan 10 13:10:25 GMT 2012  Olly Betts <olly@survex.com>

	* net/: Split encode_length() and decode_length() out of
	  serialise.{cc,h} into new file length.{cc,h}, and remove
	  XAPIAN_VISIBILITY_DEFAULT from decode_length().
	* api/,backends/brass/brass_database.cc,
	  backends/chert/chert_database.cc,backends/remote/net_postlist.cc,
	  backends/remote/remote-database.cc,net/: Update headers which need
	  to be included.
	* tests/internaltest.cc,tests/unittest.cc: Move serialiselength1 and
	  serialiselength2 from internaltest to unittest.

Mon Jan 09 02:16:22 GMT 2012  Olly Betts <olly@survex.com>

	* tests/api_compact.cc: Actually add test coverage for
	  ByteLengthPrefixedStringItor - the previous attempt didn't cause
	  merging of synonym lists to happen.

Mon Jan 09 00:21:25 GMT 2012  Olly Betts <olly@survex.com>

	* tests/api_replicate.cc: Fix comment typo.

Sun Jan 08 14:47:19 GMT 2012  Olly Betts <olly@survex.com>

	* tests/api_compact.cc: Add test coverage for
	  ByteLengthPrefixedStringItor.

Sun Jan 08 14:05:19 GMT 2012  Olly Betts <olly@survex.com>
